--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thanh Resume</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="color.css">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="icon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -230,20 +231,15 @@
                 <div class="tab-content hidden" data-tab="tab-4">
                     <h3 class="title">Work Experience</h3>
                     <div class="list" style="color: #828282;">
-                        <div class="item">
-                            <i class='bx bx-sm bxs-mobile'></i> 0983961054
+                        <div class="item space">
+                            <i class='bx bx-sm bx-laptop'></i>
+                            <h4>Student Internship</h4>
+                            <p>1 Month: OPTECH LLC, working with HTML5, CSS3,JavaScript, PHP and Laravel framework.</p>
                         </div>
-                        <div class="item">
-                            <i class='bx bx-sm bxl-gmail'></i> <a
-                                href="mailto:lnthanh.work@gmail.com">lnthanh.work@gmail.com</a>
-                        </div>
-                        <div class="item">
-                            <i class='bx bx-sm bxl-github'></i> <a
-                                href="https://github.com/yasuo99">https://github.com/yasuo99</a>
-                        </div>
-                        <div class="item">
-                            <i class='bx bx-sm bxl-linkedin'></i><a
-                                href="https://www.linkedin.com/in/ngocthanh">https://www.linkedin.com/in/ngocthanh</a>
+                        <div class="item space">
+                            <i class='bx bx-sm bx-laptop'></i>
+                            <h4>Fresher</h4>
+                            <p>3 Months: Robert Bosch RBVH, Full-stack .NET Fresher</p>
                         </div>
                     </div>
                 </div>
