--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                         <div class="item space">
                             <i class='bx bx-sm bx-laptop'></i>
                             <h4>Fresher</h4>
-                            <p>4 Months: Robert Bosch RBVH, Full-stack .NET, Angular Fresher</p>
+                            <p>1 Year: Robert Bosch RBVH, Full-stack .NET, Angular</p>
                         </div>
                         <div class="item space">
                             <i class='bx bx-sm bx-laptop'></i>
